@@ -23,8 +23,8 @@ Build-Depends: autotools-dev,
                ruby | ruby-interpreter | ruby1.8,
                rubygems-integration (>= 1.6),
                systemtap-sdt-dev [linux-any],
-               tcl8.5-dev,
-               tk8.5-dev,
+               tcl8.6-dev,
+               tk8.6-dev,
                zlib1g-dev
 Standards-Version: 3.9.7
 Homepage: http://www.ruby-lang.org/
