@@ -36,8 +36,7 @@ configure_options += --with-dbm-type=gdbm_compat
 # hardening and other standard Debian build flags
 configure_options += $(shell dpkg-buildflags --export=configure)
 
-# when we support tcltk latest again, just point to /usr/lib/$(DEB_HOST_MULTIARCH)
-vtcltk=8.5
+vtcltk=8.6
 configure_options += --with-tcltkversion=$(vtcltk)
 configure_options += --with-tclConfig-dir=/usr/lib/$(DEB_HOST_MULTIARCH)/tcl$(vtcltk)/tclConfig.sh
 configure_options += --with-tkConfig-dir=/usr/lib/$(DEB_HOST_MULTIARCH)/tk$(vtcltk)/tkConfig.sh
@@ -47,7 +46,6 @@ configure_options += --with-tcl-include=/usr/include/tcl$(vtcltk)
 configure_options += --with-tk-include=/usr/include/tcl$(vtcltk)
 configure_options += --with-tcl-lib=/usr/lib/$(DEB_HOST_MULTIARCH)
 configure_options += --with-tk-lib=/usr/lib/$(DEB_HOST_MULTIARCH)
-export DEB_LDFLAGS_MAINT_APPEND = -L$(CURDIR)/debian/lib
 
 %:
 	dh $@ --parallel --with autotools-dev --with autoreconf
@@ -55,15 +53,11 @@ export DEB_LDFLAGS_MAINT_APPEND = -L$(CURDIR)/debian/lib
 override_dh_auto_configure:
 	cp /usr/share/misc/config.guess tool
 	cp /usr/share/misc/config.sub tool
-	mkdir -p debian/lib
-	ln -sf /usr/lib/$(DEB_HOST_MULTIARCH)/libtcl$(vtcltk).so debian/lib/libtcl.so
-	ln -sf /usr/lib/$(DEB_HOST_MULTIARCH)/libtk$(vtcltk).so debian/lib/libtk.so
 	dh_auto_configure -- $(configure_options)
 
 override_dh_auto_clean:
 	dh_auto_clean
 	rm -f tool/config.guess tool/config.sub
-	rm -rf debian/lib
 	$(RM) -r .ext
 	$(RM) -r doc/capi
 
